dnl WARNING:
dnl   I have almost no prior experience with GNU autoconf/automake and this
dnl   is very much a work in progress.  The original Makefile for Linux can
dnl   be found in Source/Makefile.orig.  If you have trouble with building
dnl   CSPFlightSim with this configure script or autmake files, and know
dnl   how to fix them, please do so and commit the changes to CVS.  Thanks!
dnl
dnl   -OS

dnl Process this file with autoconf to produce a configure script.
AC_INIT(Source/CSPSim.cpp)
#AM_INIT_AUTOMAKE(CSPSim, 0.1.0)
#AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB

dnl Checks for libraries.

dnl Checks for header files.
AC_STDC_HEADERS
AC_HAVE_HEADERS(string.h fcntl.h sys/file.h sys/param.h)

dnl Checks for library functions.
AC_FUNC_ALLOCA

dnl Check for st_blksize in struct stat
AC_ST_BLKSIZE

dnl check for Simple Direct Media Library
CSP_LIB_CONFIG([SDL], [sdl], [1.2.5], [Simple Direct Media Library], [http://www.libsdl.org/])

dnl check for SDL Image Library
AC_CHECK_LIB(SDL_image, IMG_Load, [], [AC_MSG_ERROR([
SDL_image does not appear to be installed.  You can download
this library from http://www.libsdl.org/projects/SDL_image
If SDL_image is already installed, please specify a library 
path when running configure: --sdl_image_path=xxx])], [])

dnl check for SDL Console Library
AC_CHECK_LIB(SDL_console, CON_DrawConsole, [], [AC_MSG_ERROR([
SDL_console does not appear to be installed.  You can download
this library from http://sdlconsole.tuxfamily.org
If SDL_console is already installed, please specify a library 
path when running configure: --sdl_image_path=xxx])], [])

dnl check for Geospatial Data Abstraction Library 
CSP_LIB_CONFIG([GDAL], [gdal], [1.1.7], [Geospatial Data Abstraction Library], [http://remotesensing.org/gdal/])

dnl check for OpenSceneGraph
CSP_OSG_CONFIG(osg, 0.9.3, [OpenSceneGraph])
CSP_OSG_CONFIG(osgGLUT, 0.9.3, [OpenSceneGraph GLUT library])
CSP_OSG_CONFIG(osgUtil, 0.9.3, [OpenSceneGraph Util library])
CSP_OSG_CONFIG(osgText, 0.9.3, [OpenSceneGraph Util library])
CSP_OSG_CONFIG(osgParticle, 0.9.3, [OpenSceneGraph Particle library])

CSP_PYTHON(2.2.0)

#AC_CHECK_LIB(osgGLUT, osgGLUTGetVersion, ,
#     [AC_MSG_ERROR(OpenSceneGraph GLUT library not found. See http://www.openscenegraph.org)],)
#AC_CHECK_LIB(osgUtil, osgUtilGetVersion, ,
#     [AC_MSG_ERROR(OpenSceneGraph Util library not found. See http://www.openscenegraph.org)],)
#AC_CHECK_LIB(osgText, osgTextGetVersion, ,
#     [AC_MSG_ERROR(OpenSceneGraph Text library not found. See http://www.openscenegraph.org)],)
#AC_CHECK_LIB(osgParticle, osgParticleGetVersion, ,
#     [AC_MSG_ERROR(OpenSceneGraph Particle library not found. See http://www.openscenegraph.org)],)


AC_OUTPUT([Makefile Source/Makefile Source/FX/Makefile], [])
	      
