AC_PREREQ(2.13)

# Process this file with autoconf to produce a configure script.
AC_INIT(CSP-demeter, 0.1, [http://csp.sourceforge.net])
AC_CONFIG_SRCDIR([BitArray.h])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_RANLIB

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([memory.h stdlib.h string.h])

# Checks for tools.
AC_CHECK_TOOL(AR, ar, :)

AC_LANG_CPLUSPLUS

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_STRUCT_TM


# Checks for library functions.
AC_CHECK_FUNCS([memset pow sqrt strerror strstr])

# Checks for other libraries
# CSP_TEST_SDL(1.2.5)
CSP_LIB_CONFIG([SDL], [sdl], [1.2.5], [CSP_SDL_ERROR])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT(,echo timestamp > stamp-h)

