# Copyright (C) 2001 Open Source Telecom Corporation.
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

MAINTAINERCLEANFILES = Makefile Makefile.in
ccgnuincludedir=$(includedir)/cc++2/cc++/
ccgnuinclude_HEADERS = counter.h objcount.h objmap.h oststring.h \
	template.h functions.h objlink.h objsync.h pointer.h


